service-platform-toolkit/utils/kube-config/services/logging/es-kibana/kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana-logging
  namespace: platform
  labels:
    k8s-app: kibana-logging
    #kubernetes.io/cluster-service: "true"
    kubernetes.io/name: "Kibana"
spec:
  ports:
  - port: 5601
    protocol: TCP
    targetPort: 5601
  selector:
    k8s-app: kibana-logging
  type:
    NodePort
