service-platform-toolkit/utils/kube-config/services/logging/es-kibana/kibana-domain.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress-domain
  namespace: kube-system
  annotations:
    nginx.org/server-snippet: "proxy_ssl_verify off;"
spec:
  rules:
  - host: kibana.system.local.service.platform
    http:
      paths:
      - backend:
          serviceName: kibana-logging
          servicePort: 5601
        path: /
---
apiVersion: v1
kind: Service
metadata:
  name: kibana-logging
  namespace: kube-system
  labels:
    k8s-app: kibana-logging
    #kubernetes.io/cluster-service: "true"
    kubernetes.io/name: "Kibana"
spec:
  ports:
  - port: 5601
    protocol: TCP
    targetPort: 5601
  selector:
    k8s-app: kibana-logging
  type:
    NodePort
