service-platform-toolkit/utils/kube-config/services/logging/es-kibana/kibana-ingress-domain.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress-domain
  namespace: platform
  annotations:
    nginx.org/server-snippet: "proxy_ssl_verify off;"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - host: kibana.system.local.service.platform
    http:
      paths:
      - backend:
          serviceName: kibana-logging
          servicePort: 5601
        path: /
